ajustes a los constraints del flujo

--- a/app/src/main/res/layout/fragment_ektp_home_main.xml
+++ b/app/src/main/res/layout/fragment_ektp_home_main.xml
@@ -53,8 +53,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/_25sdp"
-                    android:layout_marginStart="@dimen/_52sdp"
-                    android:text="¡Buen día"
+                    android:layout_marginStart="@dimen/_55sdp"
+                    android:text="@string/home_hello"
                     android:theme="@style/title_4"
                     android:gravity="start"
                     app:layout_constraintStart_toStartOf="parent"
@@ -63,24 +63,24 @@
                 <!--cambiar el tamaño del nombre de usuario dpendiendo su logitud-->
                 <TextView
                     android:id="@+id/userNameTextView"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:maxWidth="@dimen/_150sdp"
-                    android:text="francisco javier"
+                    android:text="Ana Karen Abigail!"
                     android:fontFamily="@font/azo_sans_bold"
                     android:textColor="@color/black"
-                    android:textAlignment="center"
-                    android:textSize="@dimen/_25sdp"
-                    android:layout_marginStart="@dimen/_5sdp"
+                    android:textAlignment="textStart"
+                    android:textSize="@dimen/_24sdp"
+                    android:layout_marginStart="@dimen/_8sdp"
+                    android:layout_marginEnd="@dimen/_50sdp"
+                    app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="@id/hiUserNameTextView"
-                    app:layout_constraintBottom_toBottomOf="@+id/hiUserNameTextView"
                     app:layout_constraintStart_toEndOf="@+id/hiUserNameTextView"/>
                 <!---->
                 <ImageButton
                     android:id="@+id/balanceMovementsImageButton"
                     android:layout_width="@dimen/_91sdp"
                     android:layout_height="@dimen/_90sdp"
-                    android:layout_marginEnd="@dimen/_34sdp"
+                    android:layout_marginEnd="@dimen/_30sdp"
                     android:layout_marginTop="@dimen/_25sdp"
                     android:layout_marginStart="@dimen/_97sdp"
                     android:background="@drawable/ic_balance_movements_button"
@@ -109,7 +109,7 @@
                     android:layout_width="@dimen/_91sdp"
                     android:layout_height="@dimen/_91sdp"
                     android:layout_marginTop="@dimen/_25sdp"
-                    android:layout_marginStart="@dimen/_34sdp"
+                    android:layout_marginStart="@dimen/_30sdp"
                     android:layout_marginEnd="@dimen/_97sdp"
                     android:background="@drawable/ic_receive_money_button"
                     app:layout_constraintEnd_toEndOf="parent"
