Se ajusta navegación en Navigator, se ajusta navegación entre fragmentos segun CheckBiometrics

--- a/app/src/main/res/navigation/create_account_navigator.xml
+++ b/app/src/main/res/navigation/create_account_navigator.xml
@@ -58,6 +58,9 @@
         <action
             android:id="@+id/action_EKTPCreateAccountCreatePassFragment_to_EKTPCreateAccountBiometricsActivationFragment"
             app:destination="@id/EKTPCreateAccountBiometricsActivationFragment" />
+        <action
+            android:id="@+id/action_EKTPCreateAccountCreatePassFragment_to_EKTPCreateAccountSuccessfulFragment"
+            app:destination="@id/EKTPCreateAccountSuccessfulFragment" />
     </fragment>
     <fragment
         android:id="@+id/EKTPCreateAccountBiometricsActivationFragment"
