--- a/app/src/main/res/layout/activity_ektpforgotten_pass.xml
+++ b/app/src/main/res/layout/activity_ektpforgotten_pass.xml
@@ -9,6 +9,13 @@
       android:layout_height="match_parent"
     android:orientation="vertical">
 
+    <fragment
+        android:id="@+id/forgottenPassNavHostFragment"
+        android:name="androidx.navigation.fragment.NavHostFragment"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:navGraph="@navigation/forgotten_pass_navigator"
+        />
 
   </LinearLayout>
 
