--- a/app/src/main/res/drawable/rounded_rectangle_gray.xml
+++ b/app/src/main/res/drawable/rounded_rectangle_gray.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="@color/elektra_light_gray"/>
-    <corners android:radius="@dimen/_15sdp"/>
-    <solid android:textColor="@color/elektra_gray"/>
+    <solid android:color="@color/elektra_white_gray"/>
+    <corners android:radius="@dimen/_6sdp"/>
+    <solid android:textColor="@color/elektra_light_gray"/>
 </shape>
