--- a/app/src/main/res/layout/fragment_ektp_forgotten_pass_phone_number.xml
+++ b/app/src/main/res/layout/fragment_ektp_forgotten_pass_phone_number.xml
@@ -131,7 +131,7 @@
                     app:layout_constraintTop_toBottomOf="@id/phoneNumber"
                     app:layout_constraintEnd_toEndOf="parent"
                     android:text="@string/invalid_data"
-                    android:theme="@style/label_edit_text"
+                    android:theme="@style/hint_edit_text"
                     android:textColor="@color/elektra_red"
                     android:visibility="invisible"/>
 
