--- a/app/src/main/res/layout/no_user_alert_layout.xml
+++ b/app/src/main/res/layout/no_user_alert_layout.xml
@@ -48,10 +48,11 @@
             app:layout_constraintTop_toBottomOf="@+id/alertTitleTextView" />
 
         <Button
-            android:id="@+id/biometricCancelButton"
-            android:layout_width="wrap_content"
+            android:id="@+id/acceptButton"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/_8sdp"
+            android:layout_marginStart="@dimen/_31sdp"
+            android:layout_marginEnd="@dimen/_31sdp"
             android:layout_marginTop="@dimen/_25sdp"
             android:text="Aceptar"
             android:theme="@style/text_button_2"
