--- a/app/src/main/res/layout/no_user_alert_layout.xml
+++ b/app/src/main/res/layout/no_user_alert_layout.xml
@@ -35,13 +35,13 @@
 
         <TextView
             android:id="@+id/alertBodyTextView"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/_10sdp"
             android:text="Crea una cuenta para acceder a todos los servicios"
             android:theme="@style/body_1"
-            android:layout_marginEnd="@dimen/_50sdp"
-            android:layout_marginStart="@dimen/_50sdp"
+            android:layout_marginEnd="@dimen/_31sdp"
+            android:layout_marginStart="@dimen/_31sdp"
             android:textAlignment="center"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
