--- a/app/src/main/res/layout/fragment_ektp_create_account_sms_verification.xml
+++ b/app/src/main/res/layout/fragment_ektp_create_account_sms_verification.xml
@@ -185,7 +185,7 @@
                 </LinearLayout>
 
                 <TextView
-                    android:id="@+id/InvalidSMSTextView"
+                    android:id="@+id/invalidSMSTextView"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/_20sdp"
