strigns crreados para los layouts de los casos de uso

--- a/app/src/main/res/layout/incorrect_password_alert_layout.xml
+++ b/app/src/main/res/layout/incorrect_password_alert_layout.xml
@@ -27,7 +27,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/_8sdp"
-            android:text="Contraseña Incorrecta"
+            android:text="@string/incorrect_password_title_label"
             android:theme="@style/title_2"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -38,7 +38,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/_10sdp"
-            android:text="Verificala nuevamente y despues de 3 intento se bloqueara"
+            android:text="@string/incorrect_password_body_label"
             android:theme="@style/body_1"
             android:layout_marginEnd="@dimen/_10sdp"
             android:layout_marginStart="@dimen/_10sdp"
@@ -51,7 +51,7 @@
             android:id="@+id/passwordAttemptTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="INTENTO "
+            android:text="@string/incorrect_password_attempt_label"
             android:theme="@style/title_1"
             android:textColor="@color/elektra_red"
             android:layout_marginTop="@dimen/_24sdp"
@@ -66,7 +66,7 @@
             android:layout_marginStart="@dimen/_31sdp"
             android:layout_marginEnd="@dimen/_31sdp"
             android:layout_marginTop="@dimen/_8sdp"
-            android:text="Aceptar"
+            android:text="@string/incorrect_password_accept_button_label"
             android:theme="@style/text_button_2"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
