--- a/app/src/main/res/layout/locked_password_alert_layout.xml
+++ b/app/src/main/res/layout/locked_password_alert_layout.xml
@@ -27,7 +27,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/_8sdp"
-            android:text="Constraseña Bloqueada"
+            android:text="@string/locked_password_title_label"
             android:theme="@style/title_2"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -40,8 +40,9 @@
             android:layout_marginTop="@dimen/_10sdp"
             android:layout_marginEnd="@dimen/_31sdp"
             android:layout_marginStart="@dimen/_31sdp"
-            android:text="Por tu seguridad la app fue bloqueada"
+            android:text="@string/locked_password_body_label"
             android:theme="@style/body_1"
+            android:textAlignment="center"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/alertTitleTextView" />
@@ -53,7 +54,7 @@
             android:layout_marginTop="@dimen/_25sdp"
             android:layout_marginEnd="@dimen/_8sdp"
             android:backgroundTint="@color/elektra_light_gray"
-            android:text="Cancelar"
+            android:text="@string/locked_password_cancel_button_label"
             android:textColor="@color/elektra_gray"
             android:theme="@style/text_button_2"
             app:layout_constraintEnd_toStartOf="@+id/unlockButton"
@@ -68,7 +69,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/_8sdp"
             android:layout_marginTop="@dimen/_25sdp"
-            android:text="Desbloquear"
+            android:text="@string/locked_passwprd_unlock_button_label"
             android:theme="@style/text_button_2"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
