--- a/app/src/main/res/layout/unrecognized_face_alert_layout.xml
+++ b/app/src/main/res/layout/unrecognized_face_alert_layout.xml
@@ -27,7 +27,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/_8sdp"
-            android:text="Rostro No Reconocido"
+            android:text="@string/unrecognized_face_title_label"
             android:theme="@style/title_2"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -38,7 +38,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/_10sdp"
-            android:text="Intenta Nuevamente"
+            android:text="@string/unrecognized_face_body_label"
             android:theme="@style/body_1"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -51,7 +51,7 @@
             android:layout_marginTop="@dimen/_25sdp"
             android:layout_marginEnd="@dimen/_8sdp"
             android:backgroundTint="@color/elektra_light_gray"
-            android:text="Reintentar"
+            android:text="@string/unrecognized_face_retry_button_label"
             android:textColor="@color/elektra_gray"
             android:theme="@style/text_button_2"
             app:layout_constraintEnd_toStartOf="@+id/biometricCancelButton"
@@ -66,7 +66,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/_8sdp"
             android:layout_marginTop="@dimen/_25sdp"
-            android:text="Cancelar"
+            android:text="@string/unrecognized_face_cancel_button_label"
             android:theme="@style/text_button_2"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
