--- a/app/src/main/res/layout/no_service_alert_layout.xml
+++ b/app/src/main/res/layout/no_service_alert_layout.xml
@@ -27,7 +27,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/_8sdp"
-            android:text="Sin Servicio"
+            android:text="@string/no_service_title_label"
             android:theme="@style/title_2"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -38,7 +38,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/_10sdp"
-            android:text="Intenta mas tarde"
+            android:text="@string/no_service_body_label"
             android:theme="@style/body_1"
             android:layout_marginEnd="@dimen/_31sdp"
             android:layout_marginStart="@dimen/_31sdp"
@@ -54,7 +54,7 @@
             android:layout_marginStart="@dimen/_31sdp"
             android:layout_marginEnd="@dimen/_31sdp"
             android:layout_marginTop="@dimen/_25sdp"
-            android:text="Aceptar"
+            android:text="@string/no_service_accept_button_label"
             android:theme="@style/text_button_2"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
