--- a/app/src/main/res/layout/fragment_e_k_t_p_login_biometric_login.xml
+++ b/app/src/main/res/layout/fragment_e_k_t_p_login_biometric_login.xml
@@ -50,15 +50,13 @@
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center">
+                android:layout_height="match_parent">
 
                 <TextView
                     android:id="@+id/loginWelcomeTextView"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/_45sdp"
-                    android:gravity="center"
+                    android:layout_marginTop="@dimen/_70sdp"
                     android:text="@string/login_welcome"
                     android:theme="@style/header_1"
                     app:layout_constraintEnd_toEndOf="parent"
