Se ajusta dimensiones de icono para acceder a detalles de avisos y settings

--- a/app/src/main/res/layout/fragment_ektp_home_notice.xml
+++ b/app/src/main/res/layout/fragment_ektp_home_notice.xml
@@ -65,13 +65,20 @@
                     android:text="Se ha restablecido tu contraseña"
                     android:theme="@style/appbar_title"
                     android:textColor="@color/elektra_gray"
-                    android:drawableEnd="@drawable/ic_forward_arrow"
-                    android:drawablePadding="@dimen/_6sdp"
                     android:layout_marginStart="@dimen/_55sdp"
                     android:layout_marginEnd="@dimen/_55sdp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
+
+                <ImageView
+                    android:id="@+id/notificationDetails"
+                    android:layout_width="@dimen/_20sdp"
+                    android:layout_height="@dimen/_20sdp"
+                    android:background="@drawable/ic_forward_arrow"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    android:layout_marginEnd="@dimen/_55sdp"
+                    app:layout_constraintTop_toTopOf="@id/notifi1Title"/>
 
                 <TextView
                     android:id="@+id/notifi1Body"
@@ -113,13 +120,20 @@
                     android:text="Recibiste un envio de dinero"
                     android:theme="@style/appbar_title"
                     android:textColor="@color/elektra_gray"
-                    android:drawableEnd="@drawable/ic_forward_arrow"
-                    android:drawablePadding="@dimen/_6sdp"
                     android:layout_marginStart="@dimen/_55sdp"
                     android:layout_marginEnd="@dimen/_55sdp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/separator1" />
+
+                <ImageView
+                    android:id="@+id/notificationDetails2"
+                    android:layout_width="@dimen/_20sdp"
+                    android:layout_height="@dimen/_20sdp"
+                    android:background="@drawable/ic_forward_arrow"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    android:layout_marginEnd="@dimen/_55sdp"
+                    app:layout_constraintTop_toTopOf="@id/recibeTextView"/>
 
                 <TextView
                     android:id="@+id/recibeNoticeTextView"
