Se sustituye icono compartir de acuerdo con prototipo XD

--- a/app/src/main/res/layout/activity_ektp_movements_details.xml
+++ b/app/src/main/res/layout/activity_ektp_movements_details.xml
@@ -113,11 +113,11 @@
 
                 <ImageButton
                     android:id="@+id/shareButtonDetailsCardView"
-                    android:layout_width="@dimen/_30sdp"
-                    android:layout_height="@dimen/_30sdp"
+                    android:layout_width="@dimen/_25sdp"
+                    android:layout_height="@dimen/_35sdp"
                     android:layout_marginTop="@dimen/_30sdp"
-                    android:layout_marginEnd="@dimen/_15sdp"
-                    android:background="@drawable/ic_share_button"
+                    android:layout_marginEnd="@dimen/_21sdp"
+                    android:background="@drawable/ic_share_icon"
                     android:maxWidth="@dimen/_50sdp"
                     android:maxHeight="@dimen/_50sdp"
                     app:layout_constraintTop_toTopOf="parent"
@@ -294,7 +294,7 @@
 
             </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.cardview.widget.CardView>
-        
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </layout>
