--- a/app/src/main/res/layout/item_movement.xml
+++ b/app/src/main/res/layout/item_movement.xml
@@ -1,6 +1,74 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <data>
+        <variable
+            name="movementsListItem"
+            type="com.elektra.ektp.ektpmovements.model.EKTPMovementsModel" />
+
+    </data>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <TextView
+            android:id="@+id/dateMovementTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/_31sdp"
+            android:gravity="start"
+            android:theme="@style/checkbox_text"
+            android:text="@{movementsListItem.detailDate}"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/titleMovementTextView"
+            app:layout_constraintStart_toStartOf="parent" />
+
+        <TextView
+            android:id="@+id/titleMovementTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/_16sdp"
+            android:gravity="start"
+            android:theme="@style/appbar_title"
+            android:textColor="@color/elektra_gray"
+            android:text="@{movementsListItem.detailTitle}"
+            app:layout_constraintTop_toBottomOf="@id/dateMovementTextView"
+            app:layout_constraintStart_toStartOf="parent" />
+
+        <TextView
+            android:id="@+id/accountMovementTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="start"
+            android:theme="@style/hint_edit_text"
+            android:text="@{movementsListItem.detailAccount}"
+            app:layout_constraintTop_toBottomOf="@id/titleMovementTextView"
+            app:layout_constraintStart_toStartOf="parent"
+            />
+
+        <TextView
+            android:id="@+id/ammountMovementTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="end"
+            android:theme="@style/title_3"
+            android:text="@{movementsListItem.detailAmount}"
+            app:layout_constraintTop_toTopOf="@id/titleMovementTextView"
+            app:layout_constraintBottom_toBottomOf="@id/accountMovementTextView"
+            app:layout_constraintEnd_toEndOf="parent" />
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/_1sdp"
+            android:layout_marginTop="@dimen/_31sdp"
+            android:background="@color/elektra_light_gray"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/ammountMovementTextView"
+            android:visibility="visible"/>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+</layout>
